--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,17 @@
-*.iml
-.gradle
-/local.properties
-/.idea/caches
-/.idea/libraries
-/.idea/modules.xml
-/.idea/workspace.xml
-/.idea/navEditor.xml
-/.idea/assetWizardSettings.xml
-.DS_Store
-/build
-/captures
-.externalNativeBuild
-.cxx
+.gradle/
+.idea/
+app/build/
+app/libs/
+app/src/androidTest/
+app/src/test/
+gradle/
+build.gradle
+gradle.properties
+gradlew
+gradlew
+local.properties
+play2048.iml
+settings.gradle
+app/app.iml
+app/build.gradle
+app/proguard-rules.pro
